Sentence schedule exclusion, partial session completion, TTS reliability fixes
Backend:
- Add per-sentence "excluded from schedule" flag so memorized sentences can
  be pulled out of spaced repetition without deleting them; re-including a
  sentence resets its schedule anchor so it starts fresh.
- Auto-exclude a sentence once its review count hits a configurable
  per-user threshold (new `autoExcludeAfterReviews` setting, default 10).
- Allow completing a review session partially (only the reviewed
  sentence IDs), leaving the rest pending instead of requiring all-or-nothing.
- Batch-fetch review session items/notifications instead of querying per
  session in refreshPendingSessions/pendingSessions (N+1 fix).
- New migrations V11 (exclusion columns) and V12 (auto-exclude threshold).

Frontend:
- UI to exclude/include a sentence from its schedule, an excluded-sentence
  badge, and a dedicated "Excluded" panel; wiring for partial review
  session completion.
- TTS: probe for a real WebGPU adapter (`requestAdapter()`) before
  committing to the Kokoro WebGPU path, instead of only checking that
  `navigator.gpu` exists — fixes "Failed to get GPU adapter" crashes on
  machines where WebGPU is blocklisted/disabled, falling back to WASM
  instead of the robotic native voice.
- TTS: fix a playback race condition where interrupting in-flight audio
  (rapid re-clicks, session advance) could leave stale `currentAudio`
  state or spuriously trigger the native-voice fallback for already-
  superseded audio; guarded with a playback generation counter.
- Remove a stray vim swap file that had been accidentally committed.

iOS wrapper:
- Point the app at the hosted production frontend/API origin by default
  instead of the empty/bundled config, rename the app to "Repeat Every
  Day", and pick up standard WKWebView behavior (default data store,
  back/forward swipe gestures, JS-initiated window opening).

+ SKILLS.md with a commiting rulew
Co-Authored-By: Claude Sonnet 5 <noreply@ant